melior/src/dialect/snapshots/melior__dialect__scf__tests__compile_execute_region.snap
---
source: melior/src/dialect/scf.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %0 = scf.execute_region -> index {
      %c0 = arith.constant 0 : index
      scf.yield %c0 : index
    }
    return
  }
}

